bk_ida/gccida/g3/ix86_expand_setcc
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_setcc/src/i386.c:8431:25: error: must use 'enum' tag to refer to type 'rtx_code'
int  ix86_expand_setcc( rtx_code code, rtx dest) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_setcc/src/i386.c:8470:43: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v8 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)**( ( _WORD **)&test + 1)); 
                                          ^~~~~~~~
                                          rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_setcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_setcc/src/i386.c:8470:54: error: expected expression
v8 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)**( ( _WORD **)&test + 1)); 
                                                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_setcc/src/obj/i386.o] Error 1
